# CSMNIST

./: README.md  environment.yml  pyproject.toml
csmnist/: __init__.py  constraints.py  dataset.py  viz.py
csmnist/generators/: __init__.py  alldifferent.py  brute_force.py  generator.py  ortools.py
